@@ -393,6 +393,11 @@ following experimental devices:
 		<br><tt>0x00:</tt>&nbsp;receive a packet
 		<br><tt>0x01:</tt>&nbsp;send a packet</td>
 	  </tr>
+	  <tr>
+	    <td align="left" valign="top"><tt>0x4040</tt></td>
+	    <td align="left" valign="top">Write: an address, where the emulated
+	    	MAC address will be copied to.
+	  </tr>
 	</table>
     </td>
   </tr>
